--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -3335,6 +3335,7 @@
                 const loadingDots = document.getElementById('printLoadingDots');
                 const responseContent = document.getElementById('printResponseContent');
                 const modalFooter = document.getElementById('printPopupFooter');
+                const popupCloseBtn = document.getElementById('popupCloseBtn');
 
                 // Reset modal states before showing
                 loadingDots.style.display = 'flex';
@@ -3347,6 +3348,7 @@
                     backdrop: 'static',
                     keyboard: false
                 });
+                popupCloseBtn.disabled = true;
                 printModal.show();
 
                 // Step 1: Save invoice to database
@@ -3384,12 +3386,12 @@
                                 `;
 
                                 document.getElementById('invoiceNumber_for_sharing').value = data.invoice_number;
-
-
-
+                                popupCloseBtn.disabled = false;
+                                
                             }, 1000); // Optional delay for smooth transition
 
                         } else {
+                            popupCloseBtn.disabled = false;
                             // throw new Error(data.error || 'Failed to save invoice');
                             loadingDots.style.display = 'none';
                             responseContent.style.display = 'block';
@@ -3401,6 +3403,7 @@
                         }
                     })
                     .catch(error => {
+                        popupCloseBtn.disabled = false;
                         console.error('Error:', error);
                         loadingDots.style.display = 'none';
                         responseContent.style.display = 'block';
