ready for testing

--- a/templates/dashboards/admin/invoice.html
+++ b/templates/dashboards/admin/invoice.html
@@ -553,7 +553,7 @@
 
                             <!-- Payment Note 1 -->
                             <div class="p-4 bg-gray-700/50 border-l-4 border-blue-400 rounded-lg shadow-sm">
-                                <p class="font-semibold text-blue-400 mb-1">Payment Note:</p>
+                                <p class="font-semibold text-blue-400 mb-1">Payment Note By Salesman:</p>
                                 <p class="text-gray-300 italic">${data.data.PAYMENT_NOTE_1}</p>
                             </div>
                             
@@ -561,7 +561,7 @@
                         `
                             <!-- Payment Note 2 -->
                             <div class="p-4 bg-gray-700/50 border-l-4 border-yellow-400 rounded-lg shadow-sm">
-                                <p class="font-semibold text-yellow-400 mb-1">Payment Note:</p>
+                                <p class="font-semibold text-yellow-400 mb-1">Payment Note By Accountant:</p>
                                 <p class="text-gray-300 italic">${data.data.PAYMENT_NOTE_2}</p>
                             </div>
                             `
