--- a/templates/dashboards/sales/sell.html
+++ b/templates/dashboards/sales/sell.html
@@ -1843,7 +1843,7 @@
                                                 <option value="at_store">At Store</option>
                                                 <option value="porter">Porter</option>
                                                 <option value="transport">Transport</option>
-                                                <option value="post">Post</option>
+                                                <!-- <option value="post">Post</option> -->
                                             </select>
                                         </div>
                                     </div>
@@ -1863,7 +1863,7 @@
                                                 <i class="fas fa-search"></i>
                                             </span>
                                             <input type="text" id="transportSearch"
-                                                placeholder="Enter Transport Company Name or Pincode"
+                                                placeholder="Enter Transport City or Pincode"
                                                 class="w-full pl-10 pr-4 py-2 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all"
                                                 autocomplete="off">
                                         </div>
