--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -12,7 +12,7 @@
         xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
+      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         :root {
