--- a/templates/dashboards/manager/invoice.html
+++ b/templates/dashboards/manager/invoice.html
@@ -7,7 +7,7 @@
     <title>Invoice</title>
     <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}" type="image/x-icon">
     <!-- Load Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
     <style>
         /* Custom Font Setup */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
