--- a/templates/dashboards/packaging/images_page.html
+++ b/templates/dashboards/packaging/images_page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Invoice Gallery - {{ invoice_id }}</title>
     <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}" type="image/x-icon">
-    <script src="https://cdn.tailwindcss.com"></script>
+      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
